force-app/main/default/objects/Lead/fields/Agent_Address__c.field-meta.xml
<CustomField>
    <fullName>Agent_Address__c</fullName>
    <label>Agent Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>