force-app/main/default/objects/Lead/fields/Agent_City__c.field-meta.xml
<CustomField>
    <fullName>Agent_City__c</fullName>
    <label>Agency City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>