force-app/main/default/objects/Lead/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <label>Agent ID#</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>