force-app/main/default/objects/Lead/fields/Agent_Zip_City__c.field-meta.xml
<CustomField>
    <fullName>Agent_Zip_City__c</fullName>
    <label>Agent Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>