force-app/main/default/objects/Lead/fields/Contact_Person_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Last_Name__c</fullName>
    <label>Contact Person Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>