force-app/main/default/objects/Lead/fields/Indicated_Premium__c.field-meta.xml
<CustomField>
    <fullName>Indicated_Premium__c</fullName>
    <formula>199 + (2* Number_of_Units__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicated Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>