force-app/main/default/objects/Lead/fields/Mailing_Address2__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address2__c</fullName>
    <label>Mailing Address2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>