force-app/main/default/objects/Lead/fields/Mailing_Zip__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Zip__c</fullName>
    <label>Mailing Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>