force-app/main/default/objects/Lead/fields/Physical_Address2__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address2__c</fullName>
    <label>Physical Address2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>