force-app/main/default/objects/Lead/fields/Proposed_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Effective_Date__c</fullName>
    <label>Proposed Effective Date</label>
    <type>Date</type>
</CustomField>