force-app/main/default/objects/Lead/fields/Required_Insurance_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Required_Insurance_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Insurance Agreement</label>
    <type>Checkbox</type>
</CustomField>