force-app/main/default/objects/Lead/fields/State_County_City_complaints__c.field-meta.xml
<CustomField>
    <fullName>State_County_City_complaints__c</fullName>
    <label>State/County/City complaints?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>