force-app/main/default/objects/Lead/fields/Type_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Risk__c</fullName>
    <label>Type of Risk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Condominium</fullName>
            </value>
            <value>
                <fullName>Homeowner Association</fullName>
                <label>Homeowners Association</label>
            </value>
            <value>
                <fullName>Co-op</fullName>
            </value>
            <value>
                <fullName>Master Association</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>