force-app/main/default/objects/Lead/fields/Type_of_Risk_in_Text__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Risk_in_Text__c</fullName>
    <label>Type of Risk in Text</label>
    <type>TextArea</type>
</CustomField>