force-app/main/default/objects/Lead/fields/Uninsured_claims_in_past_3_years__c.field-meta.xml
<CustomField>
    <fullName>Uninsured_claims_in_past_3_years__c</fullName>
    <label>Uninsured claims in past 3 years?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>